<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Stringendo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_loop_delay">Loop Delay (msec)</string>
    <string name="summary_loop_delay">How long to pause between playbacks of a drill in milliseconds.</string>
    <string name="action_create">Create</string>
    <string name="loop_button_text_on">Pause</string>
    <string name="loop_button_text_off">Play</string>
    <string name="dummy_data_song">Comfortably Numb</string>
    <string name="dummy_data_drill">First Solo</string>
    <string name="dummy_data_artist">Pink Floyd</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="label_drill_name">Name</string>
    <string name="label_start_time">Start</string>
    <string name="label_end_time">End</string>
    <string name="button_edit">Edit</string>

</resources>
