<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <TextView 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:text="@string/label_drill_name"/>
        
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.85"
            android:id="@+id/text_edit_drill_name"
            android:inputType="textShortMessage"/>
        
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:text="@string/label_start_time"/>
        
        <EditText 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.85"
            android:id="@+id/text_edit_start_time"
            android:inputType="time"/>
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <TextView 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:text="@string/label_end_time"/>
        
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.85"
            android:id="@+id/text_edit_end_time"
            android:inputType="time"/>
        
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:orientation="horizontal"
  		style="?android:attr/buttonBarStyle">

      	<Button
      	    style="?android:attr/buttonBarButtonStyle"
      	    android:layout_width="wrap_content"
      	    android:layout_height="wrap_content"
      	    android:layout_weight="0.5"
      	    android:text="@string/button_save"
      	    android:id="@+id/button_save"/>
	    
	    <Button
	        style="?android:attr/buttonBarButtonStyle"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.5"
	        android:text="@string/button_cancel"
	        android:id="@+id/button_cancel" />
	        
    </LinearLayout>
    
</LinearLayout>
